Vertically center stop-paying section content on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1699,6 +1699,8 @@ p {
 @media (max-width: 991px) {
     .section-stop-paying-inner {
         flex-direction: column !important;
+        justify-content: center !important;
+        min-height: inherit;
     }
 
     .section-stop-paying-inner.mobile-reverse {
